tests/reference/asr-kind_star_of_complex-445a788.stderr
semantic error: Expected initialization expression for kind
 --> tests/errors/kind_star_of_complex.f90:3:13
  |
3 |     complex(*) a
  |             ^ 
